// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`molang - syntax should be able to parse and match the syntax tree generated 0. !variable.swaying && query.all_animations_finished 1`] = `
[
  "surround: ",
  "! [operator]",
  [
    "surround: ()",
    [
      "surround: ()",
      "variable [keyword]",
      ". [access]",
      "swaying [identifier]",
    ],
    "&& [operator]",
    [
      "surround: ()",
      "query [keyword]",
      ". [access]",
      "all_animations_finished [identifier]",
    ],
  ],
]
`;

exports[`molang - syntax should be able to parse and match the syntax tree generated 1. variable.use_rolled_up_model = variable.rolled_up_time >= 0.2083 && (variable.unrolling_time == 0.0 || variable.unrolling_time <= 1.25 ); 1`] = `
[
  "surround: ",
  [
    "surround: ()",
    "variable [keyword]",
    ". [access]",
    "use_rolled_up_model [identifier]",
  ],
  "= [assignment]",
  [
    "surround: ()",
    [
      "surround: ()",
      "variable [keyword]",
      ". [access]",
      "rolled_up_time [identifier]",
    ],
    ">= [compare]",
    [
      "surround: ()",
      [
        "surround: ()",
        "0.2083 [number]",
      ],
      "&& [operator]",
      [
        "surround: ()",
        [
          "surround: ()",
          "variable [keyword]",
          ". [access]",
          "unrolling_time [identifier]",
          "== [compare]",
          "0.0 [number]",
          "|| [operator]",
          "variable [keyword]",
          ". [access]",
          "unrolling_time [identifier]",
          "<= [compare]",
          "1.25 [number]",
        ],
      ],
    ],
  ],
]
`;

exports[`molang - syntax should be able to parse and match the syntax tree generated 2. variable.walking = query.modified_move_speed > 0.01 && !variable.is_rolled_up; 1`] = `
[
  "surround: ",
  [
    "surround: ()",
    "variable [keyword]",
    ". [access]",
    "walking [identifier]",
  ],
  "= [assignment]",
  [
    "surround: ()",
    [
      "surround: ()",
      "query [keyword]",
      ". [access]",
      "modified_move_speed [identifier]",
    ],
    "> [compare]",
    [
      "surround: ()",
      [
        "surround: ()",
        "0.01 [number]",
      ],
      "&& [operator]",
      [
        "surround: ()",
        "! [operator]",
        [
          "surround: ()",
          "variable [keyword]",
          ". [access]",
          "is_rolled_up [identifier]",
        ],
      ],
    ],
  ],
]
`;
